methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:4: error: not found: value FacingTrail
    FacingTrail()
    ^